tests/lean/nbug1.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
Error (line: 1, pos: 1) invalid notation declaration, at least one placeholder expected
